# mcdonalds_etl

./: .gitignore  Dockerfile_dagster  Dockerfile_user_code  dagster.yaml  docker-compose.yaml  pyproject.toml  workspace.yaml
mcdonalds_etl/: definitions.py  jobs.py  resources.py  schedules.py
mcdonalds_etl/assets/: azure.py  constants.py  load.py  sql_server.py  transformations.py
